# job-search-agents

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_ARCHITECTURE_BRIEF.md  CLAUDE_CODE_PROJECT_CONTEXT.md  CLAUDE_CODE_SHORT_PROMPT.md  README.md
.claude/: settings.json
apps/web/: env.example  package-lock.json  package.json
apps/web/lib/: api.ts
apps/web/pages/: bay-area.tsx  index.tsx  jobs.tsx  tags.tsx
apps/web/pages/company/: [ticker].tsx
apps/web/pages/company/id/: [id].tsx
apps/web/pages/runs/: [runId].tsx  index.tsx
services/api/: .gitignore  env.example  pyproject.toml
services/api/app/: main.py
services/api/app/agents/: __init__.py  career_discovery_agent.py
services/api/app/api/routes/: admin.py  bay_area_companies.py  bulk_scrape.py  companies.py  health.py  job_applications.py  scrape.py
services/api/app/core/: config.py
services/api/app/db/: base.py  init_db.py  session.py
services/api/app/models/: bay_area_company.py  company.py  job_application.py  scrape_event.py  scrape_run.py  tag.py
services/api/app/repositories/: bay_area_company_repo.py  company_repo.py  job_application_repo.py  scrape_run_repo.py
services/api/app/schemas/: bay_area_company.py  company.py  job_application.py  scrape.py
services/api/app/scrapers/: __init__.py  job_count_extractor.py
services/api/app/services/: bulk_scrape_service.py  scrape_service.py  seeding.py
services/api/app/sources/: base.py  dow_jones.py  nasdaq100.py  russell2000.py  sp500.py
services/api/scripts/: migrate_bay_area_to_companies.py  misc.ipynb
