[project]
name = "job-search-api"
version = "0.1.0"
description = "Job Search Agent API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "requests>=2.31.0",
    "greenlet>=3.0.0",
    "playwright>=1.40.0",
    "tenacity>=8.2.0",
    "openai>=1.0.0",
    "openai-agents>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=3.0.2",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

